# vrp-recognizer

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  db.sqlite3  importantDjangoCommands.txt  manage.py  pyproject.toml  todos.txt  vrpReader.py  vrpReaderTest.ipynb
notebooks/: 1.0-os-initial-vrp-reading.ipynb  1.1-os-initial-web-scraping.ipynb
scripts/: vrp_reader.py.archive  web_scraper.py
utils/: vrpCodesGermany.json  vrpReader.py  vrpReaderTest.ipynb  webScraper.ipynb  webScraper.py
vrpRecognizer/: asgi.py  settings.py  urls.py  wsgi.py
vrpRecognizer/vrpAssigner/: admin.py  apps.py  models.py  serializers.py  views.py
vrpRecognizer/vrpAssigner/fixtures/: vrpCodesGermany.json
vrpRecognizer/vrpAssigner/migrations/: 0001_initial.py  0002_remove_vrplocation_countrycode.py  0003_auto_20201212_1908.py
vrp_assigner/: admin.py  apps.py  models.py  serializers.py  views.py
vrp_assigner/migrations/: 0001_initial.py
vrp_recognizer/: asgi.py  settings.py  urls.py  wsgi.py
